<resources>
    <string name="app_name">ElectroMartMAD</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_item">Item</string>
    <string name="menu_account">Account</string>
    <string name="menu_payment">Payment</string>
    <string name="menu_rateing">Rating</string>


    <string name="menu_contactus">Contact Us</string>
    <string name="menu_logout">Log Out</string>
    <string name="title_activity_login">Log In</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_cashpayment">Cash Payment</string>
    <string name="title_activity_cardpayment">Card Payment</string>
    <string name="title_activity_rating">Rating</string>
    <string name="title_activity_additem">Add Item</string>
    <string name="title_activity_itemlist">Item List</string>
</resources>
