<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_item"
            android:icon="@drawable/item_icon"
            android:title="@string/menu_item" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/account_icon"
            android:title="@string/menu_account" />
        <item
            android:id="@+id/nav_payment"
            android:icon="@drawable/payment_icon"
            android:title="@string/menu_payment" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/rating_icon"
            android:title="@string/menu_rateing" />
    </group>

    <item android:title=" ">
        <menu>
            <item
                android:id="@+id/nav_contactus"
                android:icon="@drawable/contactus_icon"
                android:title="@string/menu_contactus" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
