<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.electromartmad.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_item"
        android:name="com.example.electromartmad.ui.item.ItemFragment"
        android:label="@string/menu_item"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.electromartmad.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/nav_payment"
        android:name="com.example.electromartmad.ui.payment.PaymentFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_payment" />

    <fragment
        android:id="@+id/nav_rating"
        android:name="com.example.electromartmad.ui.rating.RatingFragment"
        android:label="@string/menu_rateing"
        tools:layout="@layout/fragment_rating" />

    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.example.electromartmad.ui.contactus.ContactUsFragment"
        android:label="@string/menu_contactus"
        tools:layout="@layout/fragment_contactus" />
</navigation>